# soap-stabilizer-cpp

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
docker-resources/: docker-build-n-run.sh  run.sh
src/: main.cpp
src/common/: class_macros.h  fmt_json.h  str_value.cpp  str_value.h  synchronized_queue.h
src/config/: config.cpp  config.h
src/exceptions/: exceptions.cpp  exceptions.h
src/http/: http_header.cpp  http_header.h  http_request.cpp  http_request.h  http_result.cpp  http_result.h  http_server.cpp  http_server.h
src/logging/: logging.h
src/metrics/: counter.cpp  counter.h  gauge.cpp  gauge.h  metric.cpp  metric.h  metrics_formatter.cpp  metrics_formatter.h  metrics_registry.cpp  metrics_registry.h  metrics_server.cpp  metrics_server.h
src/run_manager/: run_manager.cpp  run_manager.h
src/uid/: uid.cpp  uid.h
test/: test_boost_beast.cpp  test_common.cpp  test_duty.cpp  test_exceptions.cpp  test_manage_configs.cpp  test_metric.cpp  test_mm_client.cpp  test_schedule.cpp  test_schedule_2.cpp  test_tg_client.cpp  test_tg_client_2.cpp
